Fix some css issues with scrollbars on windows/linux
* Create custom scrollbar on chrome, unfortunately firefox doesn't support it

[Delivers #65800122]

--- a/lumify-web-war/src/main/webapp/less/users/chat/chat.less
+++ b/lumify-web-war/src/main/webapp/less/users/chat/chat.less
@@ -1,10 +1,12 @@
 
-width: 200px;
-float: left;
-height: 100%;
-position: relative;
-padding-left: 10px;
+float: right;
 font-size: 90%;
+height: 100%;
+margin: 0 0 0 5px;
+padding: 0;
+position: relative;
+width: 250px;
+.box-sizing(border-box);
 
 &:before {
   position: absolute;
@@ -18,19 +20,21 @@ font-size: 90%;
 }
 
 .chat-window {
-  overflow: auto;
+  overflow: scroll;
+  overflow-x: hidden;
   height: 100%;
-  padding-right: 10px;
+  padding: 0;
 
   .to { display: none; }
 
   .chat-messages {
     margin-top: 10px;
+    padding: 0 1em;
 
     .chat-message {
       border: 0 !important;
       margin: 1em 0;
-      padding-bottom: 1.5em;
+      padding-bottom: 2.5em;
       padding-right: 5px;
 
       .from {
@@ -51,8 +55,8 @@ font-size: 90%;
   .new-message {
     bottom: 10px;
     position: absolute;
-    right: 15px;
-    left: 10px;
+    right: 1em;
+    left: 1em;
     padding: 0;
     margin: 0;
     display: block;
